--- a/render.yaml
+++ b/render.yaml
@@ -4,4 +4,5 @@ services:
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn myapp:app
+    pythonVersion: 3.10
     plan: free
